--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="schwoaz">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="lightGrey">#808080</color>
 </resources>
