--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,18 +12,10 @@
     tools:context="com.example.nathalieseibert.wells.LoginActivity">
 
     <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="178dp">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -43,8 +36,7 @@
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:singleLine="true"
-                    />
+                    android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -68,67 +60,65 @@
 
             <Button
                 android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textSize="20sp"
-                android:textColor="@color/schwoaz"
                 android:onClick="onClickSwitchActivity1"
+                android:text="@string/action_sign_in"
+                android:textColor="@color/schwoaz"
+                android:textSize="20sp"
+
                 />
 
 
             <Button
                 android:id="@+id/register_button"
-                style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:onClick="onClickSwitchActivity"
                 android:text="@string/action_register_in"
-                android:textSize="20sp"
                 android:textColor="@color/schwoaz"
-                android:onClick="onClickSwitchActivity"/>
-
+                android:textSize="20sp" />
 
 
             <!-- Fingerprint -->
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/activity_main"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.jessicathornsby.fingerprintauthentication">
-
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="220dp"
-                    android:tint="@android:color/black"
-                    app:srcCompat="@drawable/fingerprint" />
-
-                <TextView
-                    android:id="@+id/fingerprint"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/fingerprint"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="20sp"
-                    android:textColor="@color/schwoaz"
-                    android:layout_marginTop="200dp"/>
-
-            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="102dp"
+            android:layout_above="@+id/fingerprint"
+            android:layout_centerHorizontal="true"
+            android:tint="@android:color/black"
+            android:src="@drawable/fingerprint"
+            />
+
+        <TextView
+            android:id="@+id/fingerprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/fingerprint"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/schwoaz"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
 </LinearLayout>
 
 
