--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -9,24 +9,20 @@
     tools:context="com.example.nathalieseibert.wells.MainMenueActivity"
     tools:showIn="@layout/app_bar_main_menue">
 
-    <FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginStart="140dp"
+            android:layout_marginLeft="140dp"
             android:layout_marginTop="100dp" />
 
         <TextView
             android:id="@+id/textMl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="245dp"
+            android:layout_marginLeft="245dp"
             android:layout_marginTop="350dp"
             android:text="@string/textMl"
             android:textColor="@color/schwoaz"
@@ -36,7 +32,7 @@
             android:id="@+id/editWater"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="120dp"
+            android:layout_marginLeft="120dp"
             android:layout_marginTop="350dp"
             android:ems="5"
             android:inputType="number" />
@@ -45,7 +41,7 @@
             android:id="@+id/addWater"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
+            android:layout_marginLeft="160dp"
             android:layout_marginTop="300dp"
             android:text="@string/addWater"
             android:textColor="@color/schwoaz"
@@ -55,26 +51,25 @@
             android:id="@+id/simpleSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
+            android:layout_marginLeft="160dp"
             android:layout_marginTop="530dp"
             android:checked="true"
             android:scaleX="2"
             android:scaleY="2"
             android:showText="true"
             android:text="@string/simpleSwitch"
-            android:textOff="wenig"
-            android:textOn="viel"
+            android:textOff="@string/wenig"
+            android:textOn="@string/viel"
             tools:checked="false" />
 
         <Button
             android:id="@+id/haeckchen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="170dp"
+            android:layout_marginLeft="170dp"
             android:layout_marginTop="400dp"
             android:onClick="OnClickHackerl"
             android:text="@string/haeckchen" /><!-- text to be displayed whenever current state is checked-->
 
-    </FrameLayout>
 
 </RelativeLayout>
