--- a/app/src/main/res/layout/fragment_einstellungen.xml
+++ b/app/src/main/res/layout/fragment_einstellungen.xml
@@ -17,8 +17,8 @@
 
     <Button
         android:id="@+id/Grundeinstellungen"
-        android:layout_width="380dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="360dp"
+        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
         android:text="@string/grundeinstellungen"
@@ -26,8 +26,8 @@
 
     <Button
         android:id="@+id/Benachrichtigung"
-        android:layout_width="380dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="360dp"
+        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="215dp"
         android:text="@string/Benachrichtigung"
@@ -36,8 +36,8 @@
 
     <Button
         android:id="@+id/löschen"
-        android:layout_width="380dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="360dp"
+        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
         android:text="@string/löschen"
@@ -48,11 +48,11 @@
 
     <Button
         android:id="@+id/PWAendern"
-        android:layout_width="380dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="360dp"
+        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
-        android:text="Passwort ändern"
+        android:text="@string/passwort_ndern"
         android:textColor="@color/schwoaz"/>
 
 </FrameLayout>
