--- a/app/src/main/res/layout/fragment_pwaendern.xml
+++ b/app/src/main/res/layout/fragment_pwaendern.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:text="Passwort ändern"
+        android:text="@string/passwort_ndern"
         android:textSize="25sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/schwoaz"
@@ -21,9 +21,9 @@
         android:id="@+id/altespasswort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="130dp"
-        android:text="Altes Passwort"
+        android:text="@string/altes_passwort"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
 />
@@ -32,7 +32,7 @@
         android:id="@+id/altespwinput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="130dp"
         android:inputType="textPassword"
  />
@@ -41,9 +41,9 @@
         android:id="@+id/neuespasswort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="215dp"
-        android:text="Neues Passwort"
+        android:text="@string/neues_passwort"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
  />
@@ -52,7 +52,7 @@
         android:id="@+id/neuespwinput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
+        android:layout_marginLeft="170dp"
         android:layout_marginTop="215dp"
         android:inputType="textPassword"
  />
@@ -61,9 +61,9 @@
         android:id="@+id/neuespasswortwh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="300dp"
-        android:text="Passwort bestätigen"
+        android:text="@string/passwort_best_tigen"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
  />
@@ -72,7 +72,7 @@
         android:id="@+id/neuespwinputwh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="205dp"
+        android:layout_marginLeft="205dp"
         android:layout_marginTop="300dp"
         android:inputType="textPassword"
 />
@@ -82,9 +82,9 @@
         android:id="@+id/speichern"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:text="Speichern"
+        android:text="@string/speichern"
         android:layout_marginTop="500dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:textColor="@color/schwoaz"
  />
 
