--- a/app/src/main/res/layout/fragment_statisitk.xml
+++ b/app/src/main/res/layout/fragment_statisitk.xml
@@ -22,10 +22,10 @@
         android:layout_width="194dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/title_Verlauf"
         android:layout_marginTop="550dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         />
 
     <Button
@@ -36,7 +36,7 @@
         android:enabled="false"
         android:text="@string/title_Statistik"
         android:layout_marginTop="550dp"
-        android:layout_marginStart="215dp"
+        android:layout_marginLeft="215dp"
 
  />
 
