--- a/app/src/main/res/layout/fragment_trinkbrunnen.xml
+++ b/app/src/main/res/layout/fragment_trinkbrunnen.xml
@@ -22,11 +22,11 @@
         android:layout_width="194dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="@string/title_Liste"
         android:enabled="false"
         android:layout_marginTop="550dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
 />
 
     <Button
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="550dp"
-        android:layout_marginStart="215dp"
+        android:layout_marginLeft="215dp"
         android:text="@string/title_Karte"
    />
 
