--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textPassword"
-        android:layout_alignSart="@+id/textPassword"
+        android:layout_alignStart="@+id/textPassword"
         android:layout_below="@+id/textRegister"
         android:layout_marginTop="45dp"
         android:textSize="20sp"
