--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -16,7 +16,8 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="140dp"
-            android:layout_marginTop="100dp" />
+            android:layout_marginTop="100dp"
+            android:layout_marginStart="140dp" />
 
         <TextView
             android:id="@+id/textMl"
@@ -26,7 +27,8 @@
             android:layout_marginTop="350dp"
             android:text="@string/textMl"
             android:textColor="@color/schwoaz"
-            android:textSize="32sp" />
+            android:textSize="32sp"
+            android:layout_marginStart="245dp" />
 
         <EditText
             android:id="@+id/editWater"
@@ -35,7 +37,9 @@
             android:layout_marginLeft="120dp"
             android:layout_marginTop="350dp"
             android:ems="5"
-            android:inputType="number" />
+            android:inputType="number"
+            android:layout_marginStart="120dp"
+            tools:ignore="LabelFor" />
 
         <Button
             android:id="@+id/addWater"
@@ -45,7 +49,8 @@
             android:layout_marginTop="300dp"
             android:text="@string/addWater"
             android:textColor="@color/schwoaz"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:layout_marginStart="160dp" />
 
         <Switch
             android:id="@+id/simpleSwitch"
@@ -60,7 +65,9 @@
             android:text="@string/simpleSwitch"
             android:textOff="@string/wenig"
             android:textOn="@string/viel"
-            tools:checked="false" />
+            tools:checked="false"
+            tools:targetApi="lollipop"
+            android:layout_marginStart="160dp" />
 
         <Button
             android:id="@+id/haeckchen"
@@ -69,7 +76,8 @@
             android:layout_marginLeft="170dp"
             android:layout_marginTop="400dp"
             android:onClick="OnClickHackerl"
-            android:text="@string/haeckchen" /><!-- text to be displayed whenever current state is checked-->
+            android:text="@string/haeckchen"
+            android:layout_marginStart="170dp" /><!-- text to be displayed whenever current state is checked-->
 
 
 </RelativeLayout>
