--- a/app/src/main/res/layout/fragment_pwaendern.xml
+++ b/app/src/main/res/layout/fragment_pwaendern.xml
@@ -26,7 +26,7 @@
         android:text="@string/altes_passwort"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
-/>
+        android:layout_marginStart="15dp" />
 
     <EditText
         android:id="@+id/altespwinput"
@@ -35,7 +35,8 @@
         android:layout_marginLeft="160dp"
         android:layout_marginTop="130dp"
         android:inputType="textPassword"
- />
+        android:layout_marginStart="160dp"
+        tools:ignore="LabelFor" />
 
     <TextView
         android:id="@+id/neuespasswort"
@@ -46,7 +47,7 @@
         android:text="@string/neues_passwort"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
- />
+        android:layout_marginStart="15dp" />
 
     <EditText
         android:id="@+id/neuespwinput"
@@ -55,7 +56,7 @@
         android:layout_marginLeft="170dp"
         android:layout_marginTop="215dp"
         android:inputType="textPassword"
- />
+        android:layout_marginStart="170dp" />
 
     <TextView
         android:id="@+id/neuespasswortwh"
@@ -66,7 +67,7 @@
         android:text="@string/passwort_best_tigen"
         android:textSize="20sp"
         android:textColor="@color/schwoaz"
- />
+        android:layout_marginStart="15dp" />
 
     <EditText
         android:id="@+id/neuespwinputwh"
@@ -75,7 +76,8 @@
         android:layout_marginLeft="205dp"
         android:layout_marginTop="300dp"
         android:inputType="textPassword"
-/>
+        android:layout_marginStart="205dp"
+        tools:ignore="LabelFor" />
 
 
     <Button
@@ -86,7 +88,7 @@
         android:layout_marginTop="500dp"
         android:layout_marginLeft="15dp"
         android:textColor="@color/schwoaz"
- />
+        android:layout_marginStart="15dp" />
 
 
 </FrameLayout>
