--- a/app/src/main/res/layout/fragment_karte.xml
+++ b/app/src/main/res/layout/fragment_karte.xml
@@ -18,8 +18,7 @@
         android:enabled="false"
         android:layout_marginTop="550dp"
         android:layout_marginLeft="215dp"
-
-        />
+        android:layout_marginStart="215dp" />
 
     <Button
         android:id="@+id/liste"
@@ -28,6 +27,6 @@
         android:text="@string/liste"
         android:layout_marginTop="550dp"
         android:layout_marginLeft="10dp"
-        />
+        android:layout_marginStart="10dp" />
 
 </FrameLayout>
