--- a/app/src/main/res/layout/fragment_statisitk.xml
+++ b/app/src/main/res/layout/fragment_statisitk.xml
@@ -26,7 +26,8 @@
         android:text="@string/title_Verlauf"
         android:layout_marginTop="550dp"
         android:layout_marginLeft="10dp"
-        />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/buttonkarte"
@@ -38,7 +39,7 @@
         android:layout_marginTop="550dp"
         android:layout_marginLeft="215dp"
 
- />
+        android:layout_marginStart="215dp" />
 
     <ListView
         android:id="@+id/brunnen_list_view"
