--- a/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
+++ b/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
@@ -23,7 +23,8 @@
         android:layout_marginTop="215dp"
         android:text="@string/benachrichtigung_aktivieren"
         android:textSize="20sp"
-        android:textColor="@color/schwoaz"/>
+        android:textColor="@color/schwoaz"
+        android:layout_marginStart="15dp" />
 
     <Switch
         android:id="@+id/benAktivSwitch"
@@ -32,7 +33,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginLeft="300dp"
         android:layout_marginTop="215dp"
-        android:textColor="@color/schwoaz"/>
+        android:textColor="@color/schwoaz"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="300dp" />
 
     <TextView
         android:id="@+id/benFrequ"
@@ -42,7 +45,8 @@
         android:layout_marginTop="300dp"
         android:text="@string/frequenz"
         android:textSize="20sp"
-        android:textColor="@color/schwoaz"/>
+        android:textColor="@color/schwoaz"
+        android:layout_marginStart="15dp" />
 
     <!-- Methode zum füllen von Spinner Objects in Java: Ojekte selber in String.XML als Array-->
 
@@ -53,7 +57,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginLeft="115dp"
         android:layout_marginTop="300dp"
-        android:textColor="@color/schwoaz"/>
+        android:textColor="@color/schwoaz"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="115dp" />
 
 
     <Button
@@ -65,6 +71,7 @@
         android:text="@string/speichern"
         android:layout_marginTop="500sp"
         android:textColor="@color/schwoaz"
- />
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="15dp" />
 
 </FrameLayout>
