--- a/app/src/main/res/layout/fragment_verlauf2.xml
+++ b/app/src/main/res/layout/fragment_verlauf2.xml
@@ -13,7 +13,7 @@
         android:gravity="center_horizontal"
         android:text="@string/title_Verlauf"
         android:textColor="@color/schwoaz"
-        android:textSize="25dp"
+        android:textSize="25sp"
         />
 
     <Button
@@ -26,8 +26,8 @@
         android:text="@string/title_Verlauf"
         android:layout_marginTop="550dp"
         android:layout_marginLeft="10dp"
-
-        />
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/buttonkarte"
@@ -37,7 +37,7 @@
         android:text="@string/title_Statistik"
         android:layout_marginTop="550dp"
         android:layout_marginLeft="215dp"
-        />
+        android:layout_marginStart="215dp" />
 
     <ListView
         android:id="@+id/brunnen_list_view"
