--- a/app/src/main/res/layout/fragment_statisitk.xml
+++ b/app/src/main/res/layout/fragment_statisitk.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
+        android:gravity="center|top"
         android:text="@string/title_Statistik"
         android:textColor="@color/schwoaz"
         android:textSize="25sp"
@@ -19,24 +19,16 @@
 
     <Button
         android:id="@+id/buttonlist"
-        android:layout_width="194dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="550dp"
+        android:layout_gravity="bottom|start"
         android:text="@string/title_Verlauf" />
 
     <Button
         android:id="@+id/buttonkarte"
-        android:layout_width="185dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="215dp"
-        android:layout_marginStart="215dp"
-        android:layout_marginTop="550dp"
+        android:layout_gravity="bottom|end"
         android:enabled="false"
 
         android:text="@string/title_Statistik" />
