LogIn and LogOut

--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -28,8 +28,7 @@
             android:text="@string/textMl"
             android:textColor="@color/schwoaz"
             android:textSize="32sp"
-            android:layout_marginStart="245dp"
-            android:visibility="invisible"/>
+            android:layout_marginStart="245dp"/>
 
         <EditText
             android:id="@+id/editWater"
@@ -40,8 +39,7 @@
             android:ems="5"
             android:inputType="number"
             android:layout_marginStart="120dp"
-            tools:ignore="LabelFor"
-            android:visibility="invisible"/>
+            tools:ignore="LabelFor"/>
 
         <Button
             android:id="@+id/addWater"
@@ -81,7 +79,7 @@
             android:onClick="OnClickHackerl"
             android:text="@string/haeckchen"
             android:layout_marginStart="170dp"
-            android:visibility="invisible"/><!-- text to be displayed whenever current state is checked-->
+           /><!-- text to be displayed whenever current state is checked-->
 
 
 </RelativeLayout>
