--- a/app/src/main/res/menu/main_menue.xml
+++ b/app/src/main/res/menu/main_menue.xml
@@ -5,10 +5,16 @@
     <item
         android:id="@+id/homeButton"
         android:icon="@drawable/ic_home_button"
-        android:title="@string/homeButton"
-        android:tint="@android:color/white"
         android:src="@drawable/ic_home_button"
-        app:showAsAction="always"/>
-
+        android:tint="@android:color/white"
+        android:title="@string/homeButton"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/logOut"
+        android:icon="@drawable/ic_launcher_foreground"
+        android:src="@drawable/ic_launcher_foreground"
+        android:tint="@android:color/white"
+        android:title="LogOut"
+        app:showAsAction="always" />
 
 </menu>
